Added some sample code and a test script for use in "make check".

--- a/configure.ac
+++ b/configure.ac
@@ -29,7 +29,7 @@ AC_CONFIG_AUX_DIR([./build-aux])
 # Additional Autoconf macros are in ./m4.
 AC_CONFIG_MACRO_DIR([./m4])
 
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([color-tests dist-bzip2])
 AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_RANLIB
