Changed "coflo" to "CoFlo" throughout to match the project name.  Added test1.sh to src dir.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,26 +1,27 @@
-# Second-level Makefile.am for coflo
+# Second-level Makefile.am for CoFlo
 #
 # Copyright 2011 Gary R. Van Sickle (grvs@users.sourceforge.net).
 #
-# This file is part of coflo.
+# This file is part of CoFlo.
 #
-# coflo is free software: you can redistribute it and/or modify it under the
+# CoFlo is free software: you can redistribute it and/or modify it under the
 # terms of version 3 of the GNU General Public License as published by the Free
 # Software Foundation.
 #
-# coflo is distributed in the hope that it will be useful, but WITHOUT ANY
+# CoFlo is distributed in the hope that it will be useful, but WITHOUT ANY
 # WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
 # PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 # 
 # You should have received a copy of the GNU General Public License along with
-# coflo.  If not, see <http://www.gnu.org/licenses/>.
+# CoFlo.  If not, see <http://www.gnu.org/licenses/>.
 
 bin_PROGRAMS = coflo
 coflo_SOURCES = main.cpp \
 	Function.cpp Function.h \
 	Block.cpp Block.h \
 	Successor.cpp Successor.h \
-	SuccessorTypes.h
+	SuccessorTypes.h \
+	TranslationUnit.cpp Translation.h
 
 nobase_check_SCRIPTS = test1.sh
 
