Dot graph output of Block control flow graphs now label true/false edges.  Added a loop to test_source_file_1.c.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,9 +17,10 @@
 
 bin_PROGRAMS = coflo
 coflo_SOURCES = main.cpp \
+	Block.cpp Block.h \
 	Function.cpp Function.h \
 	FunctionCall.cpp FunctionCall.h \
-	Block.cpp Block.h \
+	Program.cpp Program.h \
 	Successor.cpp Successor.h \
 	SuccessorTypes.h \
 	TranslationUnit.cpp Translation.h
