Added preliminary Doxygen support to the build system.  Split Control Flow Graph typedefs into their own header.

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,6 +21,9 @@ ACLOCAL_AMFLAGS = -I m4
 # The subdirectories containing the source code.
 SUBDIRS = src
 
+# Include additional automake fragments.
+include $(top_srcdir)/amlocal.am
+
 #DOXYGEN = "/cygdrive/c/Program Files/Doxygen/bin/doxygen.exe"
 
 #.PHONY: docs
