--- a/configure.ac
+++ b/configure.ac
@@ -35,6 +35,19 @@ AC_PROG_CXX
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 
+# Look for Doxygen.
+DX_DOXYGEN_FEATURE(ON)
+DX_DOT_FEATURE(ON)
+DX_HTML_FEATURE(ON)
+DX_CHM_FEATURE(OFF)
+DX_CHI_FEATURE(OFF)
+DX_MAN_FEATURE(OFF)
+DX_RTF_FEATURE(OFF)
+DX_XML_FEATURE(OFF)
+DX_PDF_FEATURE(OFF)
+DX_PS_FEATURE(OFF)
+DX_INIT_DOXYGEN([CoFlo], [src/Doxyfile])
+
 # Make sure we have a usable Boost version.
 AX_BOOST_BASE([1.45.0])
 AX_BOOST_PROGRAM_OPTIONS
