Created a library for invoking external tools in a semi-consistent way, "libexttools".

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -54,4 +54,4 @@ TESTS = test1.sh
 
 coflo_CPPFLAGS = $(BOOST_CPPFLAGS)
 coflo_LDFLAGS = $(BOOST_LDFLAGS) -Wl,--enable-auto-import
-coflo_LDADD = $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB)
+coflo_LDADD = ./libexttools/libexttools.a $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB)
