--- a/src/libexttools/Makefile.am
+++ b/src/libexttools/Makefile.am
@@ -15,43 +15,7 @@
 # You should have received a copy of the GNU General Public License along with
 # CoFlo.  If not, see <http://www.gnu.org/licenses/>.
 
-SUBDIRS = libexttools
 
-bin_PROGRAMS = coflo
-coflo_SOURCES = main.cpp \
-	Analyzer.cpp Analyzer.h \
-	BasicBlockGraph.h \
-	Block.cpp Block.h \
-	CFGEdgeTypeBase.cpp CFGEdgeTypeBase.h \
-	CFGEdgeTypeFallthrough.cpp CFGEdgeTypeFallthrough.h \
-	CFGEdgeTypeFunctionCall.cpp CFGEdgeTypeFunctionCall.h \
-	CFGEdgeTypeReturn.cpp CFGEdgeTypeReturn.h \
-	ControlFlowGraph.h \
-	Entry.cpp Entry.h \
-	Exit.cpp Exit.h \
-	Function.cpp Function.h \
-	FunctionCall.cpp FunctionCall.h \
-	FunctionCallResolved.cpp FunctionCallResolved.h \
-	FunctionCallUnresolved.cpp FunctionCallUnresolved.h \
-	If.cpp If.h \
-	Location.cpp Location.h \
-	NoOp.cpp NoOp.h \
-	Program.cpp Program.h \
-	PseudoStatement.cpp PseudoStatement.h \
-	RuleBase.cpp RuleBase.h \
-	RuleReachability.cpp RuleReachability.h \
-	Statement.cpp Statement.h \
-	Successor.cpp Successor.h \
-	SuccessorTypes.h \
-	Switch.cpp Switch.h \
-	TranslationUnit.cpp Translation.h
-	
-nobase_check_SCRIPTS = test1.sh
-
-# Tests to run for "make check".
-TESTS_ENVIRONMENT = export "TEST_CPPFLAGS=$(CPPFLAGS)" && export "TEST_CXXFLAGS=$(CXXFLAGS)" && $(SHELL) -x
-TESTS = test1.sh
-
-coflo_CPPFLAGS = $(BOOST_CPPFLAGS)
-coflo_LDFLAGS = $(BOOST_LDFLAGS) -Wl,--enable-auto-import
-coflo_LDADD = $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB)
+noinst_LIBRARIES = libexttools.a
+libexttools_a_SOURCES = ToolBase.cpp ToolBase.h \
+    ToolCompiler.cpp ToolCompiler.h
