--- a/configure.ac
+++ b/configure.ac
@@ -55,5 +55,5 @@ AX_BOOST_REGEX
 AX_BOOST_SYSTEM
 AX_BOOST_FILESYSTEM
 
-AC_CONFIG_FILES([Makefile src/Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile src/libexttools/Makefile])
 AC_OUTPUT
