--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -18,14 +18,38 @@
 ## Process this file with automake to produce Makefile.in.
 
 #AUTOMAKE_OPTIONS = parallel-tests
+VERBOSE = 1
 
-check_SCRIPTS = test1.sh test_use_compiler_i686-pc-mingw32-gcc-4.5.2.sh
+BUILT_SOURCES = test_source_file_1.cpp test_source_file_2.cpp
+
+# List of scripts that will be use during "make check" and are not built.  Note that scripts are not
+# distributed by default, hence the "dist_" prefix.
+dist_check_SCRIPTS = test1.sh test_use_compiler_i686-pc-mingw32-gcc-4.5.2.sh
+
+# List of scripts that will be use during "make check" and are built.  Note that scripts are not
+# distributed by default.
+check_SCRIPTS = test_cpp1.sh
+
+test_source_file_1.cpp: test_source_file_1.c
+	@# Simply copy the C files to make C++ versions.
+	cp $< $@;
+
+test_source_file_2.cpp: test_source_file_2.c
+	@# Simply copy the C files to make C++ versions.
+	cp $< $@;
+
+test_cpp1.sh: test_template.sh Makefile
+	cat $< | sed -e 's,[@]gcc[@],gcc,g' \
+	    -e 's,[@]test_source[@],\"test_source_file_1.cpp test_source_file_2.cpp\",g' \
+	> $@
+
+
 #EXTRA_PROGRAMS = test1.sh
 #EXTRA_DIST = test1.sh test_use_compiler_i686-pc-mingw32-gcc-4.5.2.sh
 
 # Tests to run for "make check".
 #TESTS_ENVIRONMENT = export "TEST_CPPFLAGS=$(CPPFLAGS)" && export "TEST_CXXFLAGS=$(CXXFLAGS)" && $(SHELL) -x
-TESTS = test1.sh test_use_compiler_i686-pc-mingw32-gcc-4.5.2.sh
+TESTS = test1.sh test_use_compiler_i686-pc-mingw32-gcc-4.5.2.sh test_cpp1.sh
 TEST_EXTENSIONS = .sh
 
 SH_LOG_COMPILER = $(SHELL)
