--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,7 +18,7 @@
 # Subdirectories with their own Makefile{.am}'s.
 # @todo Do we need something like the nobase_ stuff here: <http://sources.redhat.com/automake/automake.html#Alternative>
 # for the controlflowgraph directory?
-SUBDIRS = libexttools
+SUBDIRS = libexttools statements
 
 bin_PROGRAMS = coflo
 coflo_SOURCES = main.cpp \
@@ -33,27 +33,17 @@ coflo_SOURCES = main.cpp \
 	controlflowgraph/CFGEdgeTypeGoto.cpp controlflowgraph/CFGEdgeTypeGoto.h \
 	controlflowgraph/CFGEdgeTypeGotoBackEdge.cpp controlflowgraph/CFGEdgeTypeGotoBackEdge.h \
 	controlflowgraph/CFGEdgeTypeReturn.cpp controlflowgraph/CFGEdgeTypeReturn.h \
-	Entry.cpp Entry.h \
-	Exit.cpp Exit.h \
 	Function.cpp Function.h \
-	FunctionCall.cpp FunctionCall.h \
-	FunctionCallResolved.cpp FunctionCallResolved.h \
-	FunctionCallUnresolved.cpp FunctionCallUnresolved.h \
-	If.cpp If.h \
 	Location.cpp Location.h \
-	NoOp.cpp NoOp.h \
 	Program.cpp Program.h \
-	PseudoStatement.cpp PseudoStatement.h \
 	RuleBase.cpp RuleBase.h \
 	RuleDFSBase.cpp RuleDFSBase.h \
 	RulePrintFunctionCFG.cpp RulePrintFunctionCFG.h \
 	RuleReachability.cpp RuleReachability.h \
-	Statement.cpp Statement.h \
 	Successor.cpp Successor.h \
 	SuccessorTypes.h \
-	Switch.cpp Switch.h \
 	TranslationUnit.cpp Translation.h
 	
 coflo_CPPFLAGS = $(BOOST_CPPFLAGS)
 coflo_LDFLAGS = $(BOOST_LDFLAGS)
-coflo_LDADD = ./libexttools/libexttools.a $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB)
+coflo_LDADD = ./libexttools/libexttools.a ./statements/libstatements.a $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB)
