Automake/Autoconf improvements.  Now defaults AM_CxxFLAGS to max debug, -Wall -Wextra.  Other fixes and improvements.

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,6 +18,7 @@
 # Make sure autotools pick up the M4 macros in the ./m4 directory, and also copies
 # any third-party macros (e.g. the system-wide ax_* Autoconf Macro Archive ones
 # in /usr/share/aclocal) to ./m4 so they get distributed and automatically updated.
+# Only usefule in the top-level Makefile.am (see http://sources.redhat.com/automake/automake.html#Rebuilding).
 ACLOCAL_AMFLAGS = -I m4 --install
 
 # Include additional automake fragments.
